--- a/Notebooks/03_EDA_HEI_strat_outcomes.Rmd
+++ b/Notebooks/03_EDA_HEI_strat_outcomes.Rmd
@@ -15,12 +15,13 @@ library(factoextra)  # For PCA and visualizations
 library(cluster)  # For silhouette analysis
 library(patchwork)
 library(multimode)
+library(here)
 ```
 
 ```{r - source }
 #source preprocessing script
-rmarkdown::render("C:/Users/bm00900/OneDrive - University of Surrey/Desktop/Ph.D/DMA study/Data/Workspace.1/Notebooks/02_Diet_specific_preprocessing.Rmd", output_format = NULL)
-source("C:/Users/bm00900/OneDrive - University of Surrey/Desktop/Ph.D/DMA study/Data/Workspace.1/Scripts/EDA_utils.R")
+rmarkdown::render(here("Notebooks/02_Diet_specific_preprocessing.Rmd"), output_format = NULL)
+source(here("Scripts/EDA_utils.R"))
 
 #confirm the df is available to use
 head(df_p_t1)
@@ -40,7 +41,7 @@ head(in24_fg_t1.adj.cat)
 ```{r HEI - distribution }
 
 # Q-Q plot for HEI
-png("C:/Users/bm00900/OneDrive - University of Surrey/Desktop/Ph.D/DMA study/Data/Workspace.1/Plots/HEI_qqplot.png",  width = 1800, height = 1200, res = 300)
+png(here("Plots/HEI_qqplot.png"),  width = 1800, height = 1200, res = 300)
 qqPlot(df_p_t1$HEI.2020_tot)
 
 # Kernel Density Plot
@@ -68,7 +69,7 @@ HEI_distr <- wrap_plots(HEI_dens, HEI_hist, ncol = 1, axes = "collect_x") +
 
 HEI_distr
 
-ggsave("C:/Users/bm00900/OneDrive - University of Surrey/Desktop/Ph.D/DMA study/Data/Workspace.1/Plots/HEI_distr.png", bg = "white", plot = HEI_distr, width = 10, height = 6, dpi = 300)
+ggsave(here("Plots/HEI_distr.png"), bg = "white", plot = HEI_distr, width = 10, height = 6, dpi = 300)
 
 
 # multimodality test
@@ -83,7 +84,7 @@ HEI_boxplot <- ggplot(df_p_t1, aes(x = "", y = HEI.2020_tot)) +
        x = NULL) +
   theme_minimal()
 
-ggsave("C:/Users/bm00900/OneDrive - University of Surrey/Desktop/Ph.D/DMA study/Data/Workspace.1/Plots/HEI_boxplot.png", bg = "white", plot = HEI_boxplot, width = 10, height = 6, dpi = 300)
+ggsave(here"Plots/HEI_boxplot.png"), bg = "white", plot = HEI_boxplot, width = 10, height = 6, dpi = 300)
 
 ```
 
@@ -135,7 +136,7 @@ density_HEI_K <- density_HEI_K +
   )
 
 
-ggsave("C:/Users/bm00900/OneDrive - University of Surrey/Desktop/Ph.D/DMA study/Data/Workspace.1/Plots/density_HEI_K.png", bg = "white", plot = density_HEI_K, width = 10, height = 6, dpi = 300)
+ggsave(here("Plots/density_HEI_K.png"), bg = "white", plot = density_HEI_K, width = 10, height = 6, dpi = 300)
 
 ```
 
@@ -150,7 +151,7 @@ wcss <- sapply(1:10, function(k){                                         #to ap
                                                                           #points and the best result is chosen.
 })
 
-png("C:/Users/bm00900/OneDrive - University of Surrey/Desktop/Ph.D/DMA study/Data/Workspace.R/Plots/HEI_k_elbow.png",  width = 1800, height = 1200, res = 300)
+png(here("Plots/HEI_k_elbow.png"),  width = 1800, height = 1200, res = 300)
 plot(1:10, wcss, type = "b", pch = 19, xlab = "Number of clusters K", ylab = "WCSS")
 
 # Silhouette analysis for K=2
@@ -167,11 +168,11 @@ sil_k3 <- silhouette(k3$cluster, dist(df_p_t1$HEI.2020_tot))
 
 # plot  
 # k2
-png("C:/Users/bm00900/OneDrive - University of Surrey/Desktop/Ph.D/DMA study/Data/Workspace.R/Plots/HEI_k2_silhouette.png",  width = 1800, height = 1200, res = 300)
+png(here("Plots/HEI_k2_silhouette.png"),  width = 1800, height = 1200, res = 300)
 plot(sil_k2, col = 1:2, border = NA, main = "Silhouette for k = 2") #This plots the silhouette information with different colors for each cluster.
 
 # k3
-png("C:/Users/bm00900/OneDrive - University of Surrey/Desktop/Ph.D/DMA study/Data/Workspace.R/Plots/HEI_k3_silhouette.png",  width = 1800, height = 1200, res = 300)
+png(here("Plots/HEI_k3_silhouette.png"),  width = 1800, height = 1200, res = 300)
 plot(sil_k3, col = 1:3, border = NA, main = "Silhouette for k = 3")
 
 ```
@@ -205,7 +206,7 @@ Shapiro_k_HEI <- df_p_t1 %>%
 Shapiro_k_HEI
 
 # save 
-ggsave("C:/Users/bm00900/OneDrive - University of Surrey/Desktop/Ph.D/DMA study/Data/Workspace.1/Plots/HEI_qq_k.png", bg = "white", plot = HEI_qq_k, width = 10, height = 6, dpi = 300)
+ggsave(here("Plots/HEI_qq_k.png"), bg = "white", plot = HEI_qq_k, width = 10, height = 6, dpi = 300)
 
 ```
 
@@ -580,28 +581,28 @@ in24_fg_t1.adj.cat.medoids <- in24_fg_t1.adj.cat.medoids %>%
 
 # Save the updated dataframes with HEI clusters
 #Master file
-saveRDS(df_p_t1, "C:/Users/bm00900/OneDrive - University of Surrey/Desktop/Ph.D/DMA study/Data/Workspace.1/Data/Processed/df_p_t1.rds")
+saveRDS(df_p_t1, here("Data/Processed/df_p_t1.rds"))
 #outcomes file
-saveRDS(df_p_t1_outcomes, "C:/Users/bm00900/OneDrive - University of Surrey/Desktop/Ph.D/DMA study/Data/Workspace.1/Data/Processed/df_p_t1_outcomes.rds")
+saveRDS(df_p_t1_outcomes, here("Data/Processed/df_p_t1_outcomes.rds"))
 #FFQ files
-saveRDS(FFQ_p_ni_t1, "C:/Users/bm00900/OneDrive - University of Surrey/Desktop/Ph.D/DMA study/Data/Workspace.1/Data/Processed/FFQ_p_ni_t1.rds" )
-saveRDS(FFQ_p_ni_t1.adj.lm, "C:/Users/bm00900/OneDrive - University of Surrey/Desktop/Ph.D/DMA study/Data/Workspace.1/Data/Processed/FFQ_p_ni_t1.adj.lm.rds" )
+saveRDS(FFQ_p_ni_t1, here("Data/Processed/FFQ_p_ni_t1.rds" ))
+saveRDS(FFQ_p_ni_t1.adj.lm, here("Data/Processed/FFQ_p_ni_t1.adj.lm.rds" ))
 #in24 files
 #ni
-saveRDS(in24_ni_t1, "C:/Users/bm00900/OneDrive - University of Surrey/Desktop/Ph.D/DMA study/Data/Workspace.1/Data/Processed/in24_ni_t1.rds" )
-saveRDS(in24_ni_t1.adj.lm, "C:/Users/bm00900/OneDrive - University of Surrey/Desktop/Ph.D/DMA study/Data/Workspace.1/Data/Processed/in24_ni_t1.adj.lm.rds" )
-saveRDS(in24_nutr_t1.adj, "C:/Users/bm00900/OneDrive - University of Surrey/Desktop/Ph.D/DMA study/Data/Workspace.1/Data/Processed/in24_nutr_t1.adj.rds" )
+saveRDS(in24_ni_t1, here("Data/Processed/in24_ni_t1.rds" ))
+saveRDS(in24_ni_t1.adj.lm, here("Data/Processed/in24_ni_t1.adj.lm.rds" ))
+saveRDS(in24_nutr_t1.adj, here("Data/Processed/in24_nutr_t1.adj.rds" ))
 #ng
-saveRDS(in24_ng_t1.adj, "C:/Users/bm00900/OneDrive - University of Surrey/Desktop/Ph.D/DMA study/Data/Workspace.1/Data/Processed/in24_ng_t1.adj.rds" )
+saveRDS(in24_ng_t1.adj, here("Data/Processed/in24_ng_t1.adj.rds" ))
 #fi
-saveRDS(in24_fi_t1.adj.cat, "C:/Users/bm00900/OneDrive - University of Surrey/Desktop/Ph.D/DMA study/Data/Workspace.1/Data/Processed/in24_fi_t1.adj.cat.rds" )
-saveRDS(in24_fi_t1.adj.cat.medoids, "C:/Users/bm00900/OneDrive - University of Surrey/Desktop/Ph.D/DMA study/Data/Workspace.1/Data/Processed/in24_fi_t1.adj.cat.medoids.rds" )
-saveRDS(in24_fi_t1.adj, "C:/Users/bm00900/OneDrive - University of Surrey/Desktop/Ph.D/DMA study/Data/Workspace.1/Data/Processed/in24_fi_t1.adj.rds" )
-saveRDS(in24_fi_t1.adj_filtered, "C:/Users/bm00900/OneDrive - University of Surrey/Desktop/Ph.D/DMA study/Data/Workspace.1/Data/Processed/in24_fi_t1.adj_filtered.rds" )
+saveRDS(in24_fi_t1.adj.cat, here("Data/Processed/in24_fi_t1.adj.cat.rds" ))
+saveRDS(in24_fi_t1.adj.cat.medoids, here("Data/Processed/in24_fi_t1.adj.cat.medoids.rds" ))
+saveRDS(in24_fi_t1.adj, here("Data/Processed/in24_fi_t1.adj.rds" ))
+saveRDS(in24_fi_t1.adj_filtered, here("Data/Processed/in24_fi_t1.adj_filtered.rds" ))
 #fg
-saveRDS(in24_fg_t1.adj, "C:/Users/bm00900/OneDrive - University of Surrey/Desktop/Ph.D/DMA study/Data/Workspace.1/Data/Processed/in24_fg_t1.adj.rds" )
-saveRDS(in24_fg_t1.adj.cat, "C:/Users/bm00900/OneDrive - University of Surrey/Desktop/Ph.D/DMA study/Data/Workspace.1/Data/Processed/in24_fg_t1.adj.cat.rds" )
-saveRDS(in24_fg_t1.adj.cat.medoids, "C:/Users/bm00900/OneDrive - University of Surrey/Desktop/Ph.D/DMA study/Data/Workspace.1/Data/Processed/in24_fg_t1.adj.cat.medoids.rds" )
+saveRDS(in24_fg_t1.adj, here("Data/Processed/in24_fg_t1.adj.rds" ))
+saveRDS(in24_fg_t1.adj.cat, here("Data/Processed/in24_fg_t1.adj.cat.rds" ))
+saveRDS(in24_fg_t1.adj.cat.medoids, here("Data/Processed/in24_fg_t1.adj.cat.medoids.rds" ))
 ```
 
 
