--- a/Notebooks/18_Gm_gbm_ordination.Rmd
+++ b/Notebooks/18_Gm_gbm_ordination.Rmd
@@ -10,13 +10,14 @@ library(mia)
 library(scater)
 library(patchwork)
 library(MiRKAT)
+library(here)
 
 ```
 
 ```{r - upload df }
-tse_gbm <- readRDS("C:/Users/bm00900/OneDrive - University of Surrey/Desktop/Ph.D/DMA study/Data/Workspace.1/Data/Processed/tse_gbm.rds") 
-tse_ko <- readRDS("C:/Users/bm00900/OneDrive - University of Surrey/Desktop/Ph.D/DMA study/Data/Workspace.1/Data/Processed/tse_ko.rds") 
-metadata_t1<- readRDS("C:/Users/bm00900/OneDrive - University of Surrey/Desktop/Ph.D/DMA study/Data/Workspace.1/Data/Processed/metadata_t1.rds")
+tse_gbm <- readRDS(here("Data/Processed/tse_gbm.rds"))
+tse_ko <- readRDS(here("Data/Processed/tse_ko.rds"))
+metadata_t1<- readRDS(here("Data/Processed/metadata_t1.rds"))
 
 ```
 
@@ -69,7 +70,7 @@ MDS_p <- plotReducedDim(
 
 MDS_p 
 
-ggsave("C:/Users/bm00900/OneDrive - University of Surrey/Desktop/Ph.D/DMA study/Data/Workspace.1/Plots/MDS_gbm_aitchison.png", bg = "white", plot = MDS_p, width = 13, height = 15, dpi = 300)
+ggsave(here("Plots/MDS_gbm_aitchison.png"), bg = "white", plot = MDS_p, width = 13, height = 15, dpi = 300)
 
 
 
@@ -213,7 +214,7 @@ MDS_p <- plotReducedDim(
 
 MDS_p 
 
-ggsave("C:/Users/bm00900/OneDrive - University of Surrey/Desktop/Ph.D/DMA study/Data/Workspace.R/Plots/MDS_ko_aitchison.png", bg = "white", plot = MDS_p, width = 20, height = 25, dpi = 300)
+ggsave(here("Plots/MDS_ko_aitchison.png"), bg = "white", plot = MDS_p, width = 20, height = 25, dpi = 300)
 
 
 
